// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest should merge parent config if any 1`] = `
Object {
  "__backported": true,
  "globals": Object {
    "ts-jest": Object {
      "__parent": true,
    },
  },
}
`;

exports[`jest should returns correct config and go thru backports 1`] = `
Object {
  "__backported": true,
  "globals": Object {},
}
`;

exports[`tsJest should return correct defaults 1`] = `
Object {
  "babelConfig": undefined,
  "compiler": "typescript",
  "diagnostics": Object {
    "ignoreCodes": Array [
      6059,
      18002,
      18003,
    ],
    "pretty": true,
  },
  "isolatedModules": false,
  "stringifyContentPathRegex": undefined,
  "transformers": Array [],
  "tsConfig": Object {
    "kind": "file",
    "value": undefined,
  },
}
`;
